<resources>
    <string name="app_name">VibeCoders - FinalProjectMobileComputing</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or_continue_with">or continue with</string>
    <string name="register_here">Register Here</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register">Register</string>
    <string name="hackathons">Hackathons</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">828642328568-2u3a12ecvf0cgps8mi5ug9ulcne03s29.apps.googleusercontent.com</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>